--- a/client/src/App.css
+++ b/client/src/App.css
@@ -19,7 +19,7 @@
 }
 .App{
   width: 100%;
-  overflow: hidden;
+  overflow: clip;
   /* display: flex;
   align-items: center;
   justify-content: center;
