Fix the sponsorship page

--- a/client/src/components/Headingv2/Headingv2.css
+++ b/client/src/components/Headingv2/Headingv2.css
@@ -4,6 +4,7 @@
     justify-content: center;
     position: relative;
     width: 100%;
+    margin-bottom: 3rem;
     font-family: var(--heading-font);
 }
 
