--- a/client/src/screens/Sponsors/Sponsorship.css
+++ b/client/src/screens/Sponsors/Sponsorship.css
@@ -17,6 +17,32 @@
     flex-direction: column;
     max-width: 1200px;
 }
+
+.want-to-sponser-us {
+    text-align: center;
+    max-width: 800px;
+    padding: 0 1rem;
+    font-size: 1.1rem;
+}
+.what-is-rebeca-container {
+    width: 100%;
+    padding: 2rem 2rem;
+    display: flex;
+    flex-direction: column;
+}
+
+.what-is-rebeca-heading {
+    width: 80%;
+    align-self: flex-start;
+}
+
+.what-is-rebeca-text {
+    width: 80%;
+    align-self: flex-start;
+    margin-top: 1rem;
+    font-size: 25px;
+    line-height: 1.6;
+}
 .sponsor .heading {
     padding: 4rem 2rem 1rem 4rem;
 }
