--- a/client/src/components/Navbar/Navbar.css
+++ b/client/src/components/Navbar/Navbar.css
@@ -56,7 +56,7 @@
 }
 .navbar .nav-items .item:hover,
 .navbar .nav-items .item.active {
-    color: var(--primary);
+    color: var(--accent1);
     content: "";
     transition: 0.25s all;
 }
@@ -66,7 +66,7 @@
     bottom: 0px;
     width: 100%;
     height: 1.5px;
-    background: var(--primary);
+    background: var(--accent1);
     transform: scaleX(0);
     transform-origin: center;
     transition: all ease 0.2s;
@@ -145,10 +145,10 @@
 }
 .drawer .nav-items .item:hover,
 .drawer .nav-items .item:focus {
-    color: var(--primary);
+    color: var(--accent2);
 }
 .drawer .nav-items .item.active {
-    color: var(--primary);
+    color: var(--accent2);
 }
 
 .navbar .menu ul {
@@ -194,7 +194,7 @@
     flex-direction: row;
 }
 .navbar .menu ul .nav-item:hover {
-    color: #4b84ce;
+    color: var(--accent1);
 }
 .navbar .menu ul .nav-item .material-icons {
     color: inherit;
@@ -222,7 +222,7 @@
 
 .MuiListItemButton-root * {
     font-size: 1.5rem !important;
-    font-family: 'Exo 2' !important;
+    font-family: var(--body-font) !important;
     width: 100%;
     font-weight: 600 !important;
     padding-left: 0.5rem;
