--- a/client/src/screens/Home/Home.css
+++ b/client/src/screens/Home/Home.css
@@ -63,6 +63,7 @@
   padding: 3rem 0;
   gap: 10px;
   font-size: 2.2rem;
+  text-align: center;
 }
 
 .home .section-3 {
@@ -85,7 +86,7 @@
 .home .section-3 h1 {
   text-align: center;
   font-family: var(--heading-font);
-  font-size: 8rem;
+  font-size: 7rem;
   letter-spacing: 0.07em;
   line-height: 1em;
 }
