--- a/client/src/screens/EventSingle/EventSingle.css
+++ b/client/src/screens/EventSingle/EventSingle.css
@@ -3,7 +3,7 @@
     width: 100vw;
     min-height: 100vh;
     position: relative;
-    margin-top: 65px;
+    padding-top: 65px;
     justify-content: center;
     align-items: center;
     flex-direction: column;
@@ -35,6 +35,7 @@
     align-items: flex-start;
     gap: 0.7rem;
     width: calc(100% - 410px);
+    font-family: var(--heading-font);
 }
 
 .event-single-badge {
@@ -43,15 +44,15 @@
     text-transform: uppercase;
     padding: 0.2rem 0.5rem;
     border-radius: 4px;
-    border: 2px solid var(--primary);
-    font-weight: bold;
+    border: 2px solid var(--accent1);
+    font-family: var(--display-font);
+    color: var(--accent1)
 }
 
 .event-single-title {
-    font-size: 3.5rem;
+    font-size: 4rem;
     line-height: 3rem;
     margin-bottom: 0.5rem;
-    color: var(--primary);
     font-weight: bold;
 }
 
@@ -65,7 +66,7 @@
 .event-single-description {
     /* max-width: 1000px; */
     /* line-height: 1.6; */
-    color: #fff;
+    color: #ffffffc4;
     font-size: 1.2rem;
 }
 
@@ -81,9 +82,9 @@
 
 /* Schedule */
 .schedule-title {
-    font-size: 1.8rem;
+    font-size: 2.5rem;
     margin-top: 2rem;
-    font-weight: bold;
+    font-family: var(--display-font)
 }
 
 .schedule-item {
@@ -133,16 +134,17 @@
     left: -0.5rem;
     padding: 0.6rem;
     border-radius: 0 3px 3px 0;
-    background-color: #ef6c00;
+    background-color: var(--accent2);
     box-shadow: 0 0 8px 0 #000;
     color: #fff;
+    font-family: var(--body-font);
 }
 
 .eposter .regfee::before,
 .eposter-mobile .regfee::before {
     content: "";
     display: block;
-    background-color: #c65c04;
+    background-color: #5323a5;
     width: 0.5rem;
     height: 0.5rem;
     position: absolute;
