--- a/client/src/screens/Sponsors/Sponsorship.css
+++ b/client/src/screens/Sponsors/Sponsorship.css
@@ -48,7 +48,7 @@
     width: 80%;
     align-self: flex-start;
     margin-top: 1rem;
-    font-size: 25px;
+    font-size: 1.4rem;
     line-height: 1.6;
     color: #ffffff8b
 }
